pdfs/workerservice/5.5.2/служба-фоновых-операций.adoc
= Служба фоновых операций
:revnumber: 5.5.2
:doctype: book
:underscore: _
:page-component-name: workerservice
:page-component-version: 5.5.2
:page-version: {page-component-version}
:page-component-display-version: 5.5.2
:page-component-title: Служба фоновых операций

:docname: index
:page-module: ROOT
:page-relative-src-path: index.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369

Модуль _Служба {ws}_ является _базовым модулем_ системы {dv}.
// , который реализует функции СУБП и предоставляет инструментарий для настройки БП.

[WARNING]
====
Служба {ws} версии 5.5.2 несовместима с модулем {sm}.
====

[#index:::purpose]
== Назначение документации

Настоящий раздел документации содержит описание модуля, инструкцию по установке и руководство по администрированию модуля _Служба {ws}_.

Документация предназначена для сотрудников, выполняющих установку _Службы {ws}_.

[#index:::arrangement]
== Как организована документация модуля

.Документация содержит следующие разделы:
. <<functions:::>> -- в разделе приведены общие сведения о Службе {ws},
. <<requirements:::>> -- в разделе перечислены требования к программному и аппаратному обеспечению компьютера для установки модуля.
. <<module-structure:::>> -- в разделе перечислены составные части Службы {ws}.
. <<admin:install:::>> -- раздел содержит инструкцию по установке модуля.
. <<admin:work-log:::>> -- в данном разделе описаны настройки журналирования работы модуля.

[#__object-id-41118380]
== Общие сведения о модуле

:docname: functions
:page-module: ROOT
:page-relative-src-path: functions.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#functions:::]
=== Назначение и функции модуля

Служба {ws} предназначена для выполнения задач, поступивших от других модулей {dv} в фоновом режиме. Модули могут делегировать Службе {ws} обработку данных или выполнение иных длительных задач, для которых не требуется немедленное получение результата и возможно выполнение вне {of-ws} модуля.

.В модуле Служба {ws} реализованы следующие функции:
* Выполнять задачи различных типов:
** Сервисные задачи.
** Периодические задачи.
** Задачи по расписанию.
** Задачи по получению сообщения в очереди.
* Создавать дополнения, расширяющие функции модуля.
* Изолировать выполнение задач определённого типа в выделенном физическом процессе.
* Создавать кластер Службы {ws} для параллельной обработки задач.
// * Отправка почтового уведомления о завершении задания автору.
// * Отправка почтового уведомления о завершении группы заданий автору.
// * Отправка почтового уведомления об отклонении задания автору.
// * Отправка почтового уведомления о начале приёмки задания.
// * Отправка почтовых уведомлений.

:docname: module-structure
:page-module: ROOT
:page-relative-src-path: module-structure.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#module-structure:::]
=== Структура модуля

Модуль Служба {ws} состоит из двух частей: серверная и клиентская.

[#module-structure:::серверная-часть-модуля]
==== Серверная часть модуля

Серверная часть модуля Служба {ws} включает следующие компоненты: _Серверные компоненты_ и _Служба {ws}_.

[#module-structure:::компонент-служба-фоновых-операций]
===== Компонент "Служба {ws}"

Компонент "Служба {ws}" включает *основные* составляющие модуля.

.Составляющие компонента "Служба {ws}":
* `WorkerService.exe` -- исполняемый файл службы *{wss}*. Служба осуществляет запуск и контроль над порождаемыми фоновыми операциями.
+
****
.Служба *{wss}* реализует следующие функции:
** Загрузка конфигурации {ws} (_WorkerProcess_).
** Запуск требуемого количества {ws} с передачей им конфигурации.
** Контроль запущенности каждого {of-ws} и перезапуск остановленных.
** Остановка {ws} при остановке службы.
****
+
* `WorkerProcess.exe` и `WorkerProcess32.exe` -- исполняемые файлы Службы {ws} (x64 и x32-версии).
+
****
.Фоновая операция (_WorkerProcess_) реализует следующие функции:
* Загрузка программных компонентов, указанных в полученной от _WorkerService_ конфигурации.
* Выполнение и контроль функций, реализованных в загруженных компонентах.
****

[#module-structure:::компонент-серверные-компоненты]
===== Компонент "Серверные компоненты"

.Компонент "Серверные компоненты" включает следующие составляющие:
* Библиотека карточек "Служба {ws}".
* Библиотеки `.dll` с объектной моделью карточек и API модуля.
// Не для документации, а просто для понимания какие именно сборки поставляются в GAC: Docsvision.WorkerService.Interfaces.dll и Docsvision.WorkerService.ObjectModel.dll
* Клиентский инсталлятор, содержащий клиентские библиотеки `.dll` с объектной моделью карточек модуля и API модуля.
// Не для документации, а просто для понимания какие именно сборки поставляются в папку Win-клиента: Docsvision.WorkerService.Interfaces.dll, Docsvision.WorkerService.ObjectModel.dll, WorkerServiceCardLib.dll

Загружаемые компоненты и необходимые для выполнения их функции настройки предоставляются устанавливаемыми расширениями для Службы {ws}. Расширения являются частью модулей {dv}, использующих Службу {ws}.

:docname: requirements
:page-module: ROOT
:page-relative-src-path: requirements.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#requirements:::]
== Необходимые ресурсы

[#requirements:::hard]
=== Необходимое техническое обеспечение

Специальные требования не предъявляются.

[#requirements:::soft]
=== Необходимое программное обеспечение

* *Операционная система:* Microsoft Windows Server {serv-2} и выше.
* *Обязательное программное обеспечение:* Microsoft .NET Framework {net-v1}.

[#requirements:::dv]
=== Требования к системе {dv}

Модуль _Служба {ws}_ является обязательным для полноценной работы модулей {bo} и {ad}, см подробнее в пунктах xref:5.5.5@backoffice:admin:worker.adoc["Расширение службы {ws} для модуля {bo}"] и xref:5.5.5@backoffice:admin:worker.adoc["Расширение службы {ws} для модуля {ad}"].

[#requirements:::separate]
=== Требования для установки на отдельную машину

Модуль Служба {ws} может устанавливаться на отдельную от сервера {dv} машину, см. "<<admin:install:::>>". При этом к данной машине выдвигаются дополнительные требования.

.На отдельном сервере должны быть установлены серверные части следующих модулей:
* {pl} версии {pl-req} и выше.
* {ad} версии {ad-req} и выше.
* {bo} версии {bo-req} и выше.
* {dm} версии {dm-req} и выше.
* {wf} версии {wf-req} и выше.

:docname: requirements-account
:page-module: ROOT
:page-relative-src-path: requirements-account.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#requirements-account:::]
=== Требования к учетной записи Службы фоновых операций

_Служба {ws}_ является базовым модулем системы {dv}. Для учётной записи, от имени которой запускается служба *{wss}* требуются такие же права, как и для учётной записи модуля _{wf}_. Подробно требования перечислены ниже.

. Полный доступ к функциям администратора. Пользователь, от имени которого запускается _Служба {ws}_, должен состоять в группе локальных администраторов (*Administrators*) на сервере со _Службой {ws}_.
. _Служба {ws}_ считывает настройки из _{of-sett-serv}_, что требует соответствующих прав.
// +
// {sett-serv} хранит адрес _{of-mc}_. После изменения адреса _{of-mc}_ необходимо перезапустить IIS.
+
Если планируется использовать _Службу {ws}_ вместе с модулем _{mc}_, необходимо, чтобы учётная запись, под которой запускается _Служба {ws}_ была включена в группу *{dv-sett-serv-admins-serv}* на сервере с модулем _{mc}_.
+
. Членство в группе *{dv-sys-wf-dir}*. Пользователь, от имени которого запускается _Служба {ws}_ должен состоять в группе *{dv-sys-wf-dir}* в справочнике сотрудников на сервере {dv}.

:docname: index
:page-module: common
:page-relative-src-path: index.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#common:index:::]
== Изменения, обновления и исправленные ошибки
:page-layout: home


[tab#common:index:::tabs-1s]
====
[#common:index:::tabs-1-служба-фоновых-операций]
Служба {ws}::
+
.Общая документация
****
Общая информация об изменениях, исправленных ошибках и накопительных обновлениях.

* <<common:change-log:::>>
* <<common:bugs:::>>
* <<common:patches-log:::>>
****
====

:!page-layout:

:docname: change-log
:page-module: common
:page-relative-src-path: change-log.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#common:change-log:::]
=== Изменения в релизной версии

* Реализована поддержка работы в мультитенантном режиме.

:docname: bugs
:page-module: common
:page-relative-src-path: bugs.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#common:bugs:::]
==== Исправленные ошибки

[cols="34,66", frame=none, grid=none]
|===
|ERR-3793 (SUP-7494)
|В документации отсутствовала информация о несовместимости _Службы {ws}_ версии 5.5.2 с модулем _{sm}_.

|ERR-5396 (SUP-8628)
|Исправлена ошибка, из-за которой при экспорте создавались файлы с одинаковым содержимым.

|===

:docname: patches-log
:page-module: common
:page-relative-src-path: patches-log.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#common:patches-log:::]
=== Накопительные обновления
:page-layout: patches


:!page-layout:

[#__object-id-41126332]
== Администрирование модуля

:docname: install
:page-module: admin
:page-relative-src-path: install.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#admin:install:::]
=== Установка Службы фоновых операций

:worker:

Пользователь, выполняющий установку Службы {ws}, должен обладать правами локального администратора.

// tag::sm-incompat[]
Служба {ws} версии 5.5.2 несовместима с модулем {sm}.
// end::sm-incompat[]

.Особенности установки
****
При первичной установке модуль должен устанавливаться сразу после модуля _{pl}_ и перед модулями _{ad}_ и _{bo}_. В противном случае иначе необходимые расширения Службы {ws} не буду загружены в БД.

WARNING: Перед установкой ознакомьтесь с разделом "<<requirements:::>>"

NOTE: Компонент "Серверные компоненты" модуля обязателен для установки на сервер {dv}. Остальные компоненты могут быть установлены отдельно, на другой компьютер.
****

. Запустите пакет установки `{dv} 5 WorkerService.msi`.
+
.Мастер установки Службы {ws}
image::workerservice/5.5.2/admin/_images/install-hello.png[Мастер установки Службы {ws}]
+
. Примите условия лицензионного соглашения, чтобы продолжить установку, и нажмите кнопку *Далее*.
+
.Условия лицензионного соглашения
image::workerservice/5.5.2/admin/_images/install-license.png[Условия лицензионного соглашения]
+
. Выберите компоненты, которые требуется установить.
+
.Выбор устанавливаемых компонентов Службы {ws}
image::workerservice/5.5.2/admin/_images/install-components.png[Выбор устанавливаемых компонентов Службы {ws}]
+
****
Служба {ws}::
Устанавливает основные файлы Службы {ws}.

Серверные компоненты::
Когда компонент выбран, устанавливается библиотека карточек. Перед завершением установки будет запущена _{cns}_ для обновления БД.
+
NOTE: Компонент "Серверные компоненты" модуля обязателен для установки на сервер {dv}. Остальные компоненты могут быть установлены отдельно, на другой компьютер.

Кнопки::
* *Сброс* -- сбрасывает выбор компонентов на стандартные
* *Использование диска* -- позволяет посмотреть свободное место на системных дисках.
****
+
. На следующем шаге заполните настройки Службы {ws} и сервиса настроек.
+
.Укажите настройки модуля
image::workerservice/5.5.2/admin/_images/install-settings.png[Укажите настройки модуля]
+
Сервис настроек обеспечивает возможность работу новой логики модуля {ad} и добавляет поддержку модуля xref:5.5.1@mgmtconsole:ROOT:index.adoc[{mc}].
+
Данная страница доступна, только если устанавливается компонент _Служба {ws}_.
+
****
Без указания учетной записи Службы {ws} на данной странице продолжить установку невозможно.

Учётную запись можно изменить вручную в настройках служб Windows после установки. После изменения учетной записи вручную потребуется выполнить скрипт из папки модуля.
****
+
.. Введите _Учётную запись_ в формате `домен\пользователь` в соответствующее поле.
.. Укажите _Пароль_ учётной записи.
.. Укажите _Порт_ Службы {ws}.
.. Введите _Адрес сервиса настроек_ в формате `\http://адрес:порт`. Настройки будут доступны только по указанному адресу.
+
Адрес и порт должны быть указаны обязательно. Можно указать адрес уже существующего сервиса настроек. Порт сервиса настроек задаётся модулем xref:5.5.1@mgmtconsole:admin:install.adoc[{wacs}], по умолчанию -- `5200`.
+
Сервис настроек использует, например, xref:5.5.1@mgmtconsole::index.adoc[{mc}].
+
//tag::confirm[]
. Нажмите кнопку *Установить*, чтобы начать установку или кнопку *Назад*, чтобы вернуться на предыдущий шаг.
//end::confirm[]
+
.Продолжить установку или вернуться на предыдущий шаг
image::workerservice/5.5.2/admin/_images/install-check.png[Продолжить установку или вернуться на предыдущий шаг]
+
//tag::finish[]
. Нажмите кнопку *Готово*, чтобы закрыть мастер установки.
//end::finish[]
. Запустите {wincl}. При подключении к серверу {dv} с установленной серверной частью модуля, клиентская часть модуля будет установлена автоматически.
+
****
В систему будет добавлена служба *{wss}*.

Сервис настроек будет доступен по указанному при установке адресу.
****

[#admin:install:::установка-клиентской-части-модуля-из-установочного-пакета]
==== Установка клиентской части модуля из установочного пакета

.Чтобы установить клиентскую часть модуля вручную:
. Запустите пакет установки `{dv} 5 Worker service client.msi` вручную.
+
Для установки клиентской части модуля используется область установки (указана в приветственном окне мастера установки) и каталог установки, которые были использованы при установке модуля {pl}.
+
. Примите условия лицензионного соглашения, чтобы продолжить установку.
. Нажмите на кнопку *Установить* и дождитесь завершения установки модуля.
. Нажмите на кнопку *Готово*, чтобы закрыть мастер установки.
+
****
В систему будет добавлена служба *{wss}*.

Сервис настроек будет доступен по указанному при установке адресу.
****

:docname: update-module
:page-module: admin
:page-relative-src-path: update-module.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#admin:update-module:::]
=== Обновление модуля

Список изменений в текущей версии см. здесь: <<common:change-log:::>>.

. Остановите все сервисы {dv}. Также остановите экзепляры Службы {ws} и все сервисы в кластере {dv} или СУБП, если таковые используются.
. Установите новую версию модуля на сервере {dv} из пакета установки `{dv} 5 WorkerService.msi`.
+
. Выберите базы данных для загрузки библиотек Службы {ws}.
+
.Загрузка библиотек Службы {ws}
image::workerservice/5.5.2/admin/_images/load-libs.png[Загрузка библиотек Службы {ws}]
+
. На последней странице мастера установки установите флаг `*Обновить базу данных*`. Запустите остановленные сервисы {dv}, затем нажмите *Готово*.
. Выберите базы данных, в которых должны быть обновлены библиотеки карточек, и нажмите *OK*.
+
Дождитесь завершения процесса обновления.
+
. Клиентская часть модуля обновится автоматически при открытии {wincl}а. Самостоятельно обновить клиентские компоненты можно из пакета установки `{dv} 5 Worker service client.msi`.

[#admin:update-module:::multiple-modules]
==== Обновление нескольких модулей

Если планируется обновлять несколько модулей, следующие действия следует выполнять один раз после установки новых версий всех модулей:

. Откройте _{cns}_. Программа будет запущена в режиме мастера настройки.
+
Пользователь, от имени которого запускается _{cns}_ должен являться администратором {dv}, а также входить в группы {dv} в Справочнике сотрудников: _{dv-dm-admins-dir}_, _{dv-ad-admins-dir}_ и _{dv-sys-wf-dir}_ и _Системные группы.
+
. На странице _Базы данных_ выберите рабочую БД {dv}, установите переключатель в режим *Использовать выбранную в списке базу данных* и нажмите *Далее*.
. Будет предложено обновить базу данных до новой версии. Выберите вариант *ДА*.
. На следующей странице не изменяйте выбор обновляемых библиотек карточек. Нажмите *Далее*.
. На странице _Параметры базы данных_ нажмите *Далее*. Появится запрос на подтверждение обновления -- согласитесь. Процесс обновления займет некоторое время.
. На странице настройки производительности и перезапуска IIS нажмите *Далее*.
. На странице _Загрузка специальной конфигурации {dm}_ нажмите *Далее*, чтобы загрузить стандартную конфигурацию приложения {dm} или пропустите шаг нажатием кнопки *Пропустить*.
+
WARNING: Данные действия приведут к загрузке стандартных настроек приложения _{dm}_ и модуля _{ad}_. Если требуется сохранить собственные настройки, на шаге "Загрузка специальной конфигурации" нажмите кнопку *Пропустить*, подробнее см. в xref:5.5.4@documentmgmt:admin:update-module.adoc#update-no-overwrite[документации по обновлению модуля {dm}].
+
. Повторите предыдущий шаг для страницы _Загрузка специальной конфигурации {ad}_.
. Подтвердите настройки Workflow и выйдите из мастера.
. Обновите версию модуля на всех узлах кластера {dv}, СУБП и Web-клиента.
. Клиентские компоненты модуля на компьютерах пользователей будут обновлены автоматически при запуске {wincl}а.
+
Самостоятельно обновить клиентские компоненты можно из пакета установки `Docsvision 5 Worker service client.msi`.

:docname: launch
:page-module: admin
:page-relative-src-path: launch.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#admin:launch:::]
=== Запуск Службы фоновых операций

Работу _Службы {ws}_ обеспечивает служба *{wss}*. Данная служба должна быть запущена от имени учётной записи с правами администратора, т.е. учётная запись должна быть добавлена в группу локальных администраторов на сервере {dv}.

_Cлужба {ws}_ может использовать сервис перештамповки подписей.
// tag::cpus[]
Для корректной работы службы {ws} с использованием сервиса перештамповки подписей необходимо использовать машину, имеющую как минимум два процессора.
// end::cpus[]

При первом запуске _Служба {ws}_ читает список типов установленных расширений и прописывает себя вместе с расширениями в _{sett-serv}_. Таким образом Служба {ws} идентифицирует себя и открывает доступ к своим функциям для системы {dv}.

В дальнейшем, когда _Служба {ws}_ прочитает конфигурацию и создаст расширения, для работы отдельных расширений могут потребоваться права пользователей из группы _{dv-sys-wf-dir}_ в справочнике сотрудников {dv}.

Все настройки службы считываются из _{of-sett-serv}_.

[NOTE]
====
// tag::console[]
Если планируется использовать _Службу {ws}_ вместе с модулем _{mc}_, необходимо, чтобы учётная запись, под которой запускается _Служба {ws}_ была включена в группу *{dv-sett-serv-admins-serv}* на сервере с модулем _{mc}_.
// end::console[]
В противном случае будет недоступен xref:5.5.1@mgmtconsole:user:worker-service.adoc[узел Службы {ws}] в {of-mc}.
====

:docname: work-log
:page-module: admin
:page-relative-src-path: work-log.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#admin:work-log:::]
=== Журнал работы

Журнал работы модуля в локальной файловой системе располагается по адресу: `C:\ProgramData\Docsvision\WorkerService\Logs`.

Учётная запись, под которой запущена Служба {ws}, должна обладать правами на запись в папку `C:\ProgramData\Docsvision\WorkerService\Logs`.

//[NOTE]
//====
//Пути к журналам и уровень журналирования настраиваются в конфигурационом файле `C:\Program Files (x86)\Docsvision\WorkerService\5.5\Configuration.json` в параметрах:
//
//* _LogFile_ -- путь к журналу работы.
//* _LogTraceLevel_ -- уровень журналирования.
//====

:docname: introduction
:page-module: extensions
:page-relative-src-path: introduction.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 5.5.2
:page-origin-reftype: branch
:page-origin-refhash: bb1b8eb44bd20659b7a8441bc6bc949974c28369
[#extensions:introduction:::]
== Разработка расширений службы фоновых операций

Если вы использовали расширения Службы {ws} предыдущих версий и хотели бы использовать эту возможность в новой версии, xref:system::technical-support.adoc[обратитесь] в техническую поддержку {dv}.

//Инструкция по разработке дополнительных компонентов, расширяющих функциональные возможности модуля {dv} 5. Служба {ws}. В инструкции приведено описание основных объектов API Службы {ws}, описание программных сервисов, предоставляемых API и примеры разработки.
//
//Документ предназначен для программистов, планирующих использовать Службу {ws} для обработки задач системы {dv} или других систем.
//
//== Уровень подготовки разработчика
//
//Предполагается, что разработчик расширений для Службы {ws} знаком с принципами разработки программ на языке C# в IDE Visual Studio.
