pdfs/workerservice/6.1/служба-фоновых-операций.adoc
= Служба фоновых операций
:revnumber: 6.1
:doctype: book
:underscore: _
:page-component-name: workerservice
:page-component-version: 6.1
:page-version: {page-component-version}
:page-component-display-version: 6.1
:page-component-title: Служба фоновых операций

:docname: index
:page-module: ROOT
:page-relative-src-path: index.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e

Модуль _Служба {ws}_ является _базовым модулем_ системы {dv}.
// , который реализует функции СУБП и предоставляет инструментарий для настройки БП.

[WARNING]
====
Служба {ws} данной версии несовместима с модулем {sm}.
====

[#index:::purpose]
== Назначение документации

Настоящий раздел документации содержит описание модуля, инструкцию по установке и руководство по администрированию модуля _Служба {ws}_.

Документация предназначена для сотрудников, выполняющих установку _Службы {ws}_.

[#index:::arrangement]
== Как организована документация модуля

.Документация содержит следующие разделы:
. <<functions:::>> -- в разделе приведены общие сведения о Службе {ws},
. <<requirements:::>> -- в разделе перечислены требования к программному и аппаратному обеспечению компьютера для установки модуля.
. <<module-structure:::>> -- в разделе перечислены составные части Службы {ws}.
. <<admin:install:::>> -- раздел содержит инструкцию по установке модуля.
. <<admin:work-log:::>> -- в данном разделе описаны настройки журналирования работы модуля.

[#__object-id-41099922]
== Общие сведения о модуле

:docname: functions
:page-module: ROOT
:page-relative-src-path: functions.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#functions:::]
=== Назначение и функции модуля

Служба {ws} предназначена для выполнения задач, поступивших от других модулей {dv} в фоновом режиме. Модули могут делегировать Службе {ws} обработку данных или выполнение иных длительных задач, для которых не требуется немедленное получение результата и возможно выполнение вне {of-ws} модуля.

.В модуле Служба {ws} реализованы следующие функции:
* Выполнение задач различных типов:
** Сервисные задачи.
** Периодические задачи.
** Задачи по расписанию.
** Задачи по получению сообщения в очереди.
* Создание дополнений, расширяющих функции модуля.
* Изоляция выполнения задач определённого типа в выделенном физическом процессе.
* Создание кластера Службы {ws} для параллельной обработки задач.
// * Отправка почтового уведомления о завершении задания автору.
// * Отправка почтового уведомления о завершении группы заданий автору.
// * Отправка почтового уведомления об отклонении задания автору.
// * Отправка почтового уведомления о начале приёмки задания.
// * Отправка почтовых уведомлений.

:docname: module-structure
:page-module: ROOT
:page-relative-src-path: module-structure.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#module-structure:::]
=== Структура модуля

Модуль Служба {ws} состоит из двух частей: серверная и клиентская.

[#module-structure:::серверная-часть-модуля]
==== Серверная часть модуля

Серверная часть модуля Служба {ws} включает следующие компоненты: _Серверные компоненты_ и _Служба {ws}_.

// === Компонент "Служба {ws}"

Компонент "Служба {ws}" включает *основные* составляющие модуля.

// .Составляющие компонента "Служба {ws}":
// * `WorkerService.exe` -- исполняемый файл службы *{wss-new}*. Служба осуществляет запуск и контроль над порождаемыми фоновыми операциями.
// +
****
.Служба *{wss-new}* реализует следующие функции:
** Загрузка конфигурации {ws} (_WorkerProcess_).
** Запуск требуемого количества {ws} с передачей им конфигурации.
** Контроль запущенности каждого {of-ws} и перезапуск остановленных.
** Остановка {ws} при остановке службы.
****
// +
// * `WorkerProcess.exe` и `WorkerProcess32.exe` -- исполняемые файлы Службы {ws} (x64 и x32-версии).
// +
****
.Фоновая операция (_WorkerProcess_) реализует следующие функции:
* Загрузка программных компонентов, указанных в полученной от _WorkerService_ конфигурации.
* Выполнение и контроль функций, реализованных в загруженных компонентах.
****

[#module-structure:::компонент-серверные-компоненты]
===== Компонент "Серверные компоненты"

.Компонент "Серверные компоненты" включает следующие составляющие:
* Библиотека карточек "Служба {ws}".
* Библиотеки `.dll` с объектной моделью карточек и API модуля.
* Клиентский инсталлятор, содержащий клиентские библиотеки `.dll` с объектной моделью карточек модуля и API модуля.

Загружаемые компоненты и необходимые для выполнения их функции настройки предоставляются устанавливаемыми расширениями для Службы {ws}. Расширения являются частью модулей {dv}, использующих Службу {ws}.

:docname: requirements
:page-module: ROOT
:page-relative-src-path: requirements.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#requirements:::]
== Необходимые ресурсы

[#requirements:::hard]
=== Необходимое техническое обеспечение

Специальные требования не предъявляются.

[#requirements:::soft]
=== Необходимое программное обеспечение

.Сервер {dv} работает под управлением Linux:
* Astra Linux Special Edition {l-1}.

.Машина с Windows необходима для работы с Консолью настройки {dv} и {wincl}ом:
* Microsoft Windows Server {serv-2} и выше.
// * *Обязательное программное обеспечение:* Microsoft .NET Framework {net-v1}.

[#requirements:::dv]
=== Требования к системе {dv}

Модуль _Служба {ws}_ является обязательным для полноценной работы модулей {bo} и {ad}.

[#requirements:::separate]
=== Требования для установки на отдельную машину

Модуль Служба {ws} может устанавливаться на отдельную от сервера {dv} машину, см. "<<admin:install:::>>". При этом к данной машине выдвигаются дополнительные требования.

.На отдельном сервере должны быть установлены серверные части следующих модулей:
* {pl} версии {pl-req} и выше.
* {ad} версии {ad-req} и выше.
* {bo} версии {bo-req} и выше.
* {dm} версии {dm-req} и выше.
* {wf} версии {wf-req} и выше.

:docname: requirements-account
:page-module: ROOT
:page-relative-src-path: requirements-account.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#requirements-account:::]
=== Требования к учетной записи Службы фоновых операций

_Служба {ws}_ является базовым модулем системы {dv}. Для учётной записи, от имени которой запускается служба *{wss-new}* требуются такие же права, как и для учётной записи модуля _{wf}_. Подробно требования перечислены ниже.

// . Полный доступ к функциям администратора. Пользователь, от имени которого запускается _Служба {ws}_, должен состоять в группе локальных администраторов (*Administrators*) на сервере со _Службой {ws}_.
// . _Служба {ws}_ считывает настройки из _{of-sett-serv}_, что требует соответствующих прав.
// +
// include::admin:launch.adoc[tags=console]
// +
. Членство в группе *{dv-sys-wf-dir}*. Доменная учётная запись, от имени которой запускается _Служба {ws}_ должна состоять в группе *{dv-sys-wf-dir}* в справочнике сотрудников на сервере {dv}. Эта же УЗ должна быть указана в Консоли управления для подключения Службы {ws} к серверу. См. документацию модуля {mc}, раздел "xref:6.1@mgmtconsole:user:connections-docsvision.adoc[]".
+
WARNING: Используйте учётную запись, которая будет указана в _{of-mc}_ для подключения Службы {ws} к серверу.

:docname: index
:page-module: common
:page-relative-src-path: index.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#common:index:::]
== Изменения, обновления и исправленные ошибки
:page-layout: home


[tab#common:index:::tabs-1s]
====
[#common:index:::tabs-1-служба-фоновых-операций]
Служба {ws}::
+
.Общая документация
****
Общая информация об изменениях, исправленных ошибках и накопительных обновлениях.

* <<common:change-log:::>>
* <<common:bugs:::>>
* <<common:patches-log:::>>
****
====

:!page-layout:

:docname: change-log
:page-module: common
:page-relative-src-path: change-log.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#common:change-log:::]
=== Изменения в релизной версии

* Новая версия модуля переведена на .NET 6.0 с возможностью установки на ОС Astra Linux.
* Версии управляемых компонентов {dv} (.NET) были изменены с 5.5 на 6.0. Версии неуправляемых компонентов {dv} (С++, VB 6.0) не изменились.

:docname: bugs
:page-module: common
:page-relative-src-path: bugs.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#common:bugs:::]
==== Исправленные ошибки

[cols="34,66", frame=none, grid=none]
|===
|ERR-3793 (SUP-7494)
|В документации отсутствовала информация о несовместимости _Службы {ws}_ версии 5.5.2 с модулем _{sm}_.

|TSK-902 (SUP-5624)
|Ошибки Службы {ws} не фиксировались в журнале работы или консоли.
|===

:docname: patches-log
:page-module: common
:page-relative-src-path: patches-log.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#common:patches-log:::]
=== Накопительные обновления
:page-layout: patches


:!page-layout:

[#__object-id-41107712]
== Администрирование модуля

:docname: install
:page-module: admin
:page-relative-src-path: install.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#admin:install:::]
=== Установка и настройка Службы фоновых операций
// tag::linux[]
:of: сервиса
:wt: workerservice
:config: Configuration


****
На данный момент при установке в ОС семейства Linux существует ограничение, требующее устанавливать серверные компоненты модулей из инсталляторов `.msi` на машину с ОС Windows. Это ограничение обусловлено необходимостью работы с Консолью настройки {dv} и настройкой БД. Подробнее про имеющиеся ограничения можно прочитать в руководстве по установке системы, раздел "xref:install-linux::linux-limitations.adoc[]".
****

Пользователь, выполняющий установку Службы {ws}, должен обладать правами локального администратора.

// tag::sm-incompat[]
Служба {ws} данной версии несовместима с модулем {sm}.
// end::sm-incompat[]

WARNING: Перед установкой ознакомьтесь с разделом "xref:6.1@workerservice:ROOT:requirements.adoc[]".

. Установите службу {of} следующей командой, предварительно обновив индекс пакетов:
+
[source,bash,subs=attributes]
----
sudo apt-get update
sudo apt-get install docsvision-{wt}
----
+
. Все настройки {of} хранятся в конфигурационном файле `{config}.json`. Конфигурационный файл может быть изменён в любом текстовом редакторе, например `nano`.
+
[source,bash,subs=attributes]
----
sudo nano /usr/lib/docsvision/{wt}/{config}.json
----
+
Основные настройки, которые нужно сделать:
+
[source,json]
----
{
  "SettingsServiceConnectionString": "ConnectAddress=http://settings.domain.com:5200/api", <.>
  "ApiKey": "anything", <.>
  "RestApiAddress": "http://worker.domain.com:5900/api", <.>
  "LogFile": "/var/log/docsvision/WorkerService.log" <.>
}
----
<.> Адрес подключения к Сервису настроек.
<.> Ключ доступа к Сервису настроек -- "пароль", который также должен быть указан в конфигурационном файле сервиса.
<.> Адрес подключения к Службе {ws}.
<.> Путь к файлу журнала Службы {ws}
+
. Запустите службу модуля:
+
[source,bash]
----
sudo systemctl start dvworkerservice
----
// end::linux[]

[#admin:install:::windows]
==== Установка Службы {ws} на Windows

Пользователь, выполняющий установку Службы {ws}, должен обладать правами локального администратора.

// WARNING: При первичной установке модуль должен устанавливаться сразу после модуля _{pl}_ и перед модулями _{ad}_ и _{bo}_. В противном случае необходимые расширения Службы {ws} не буду загружены в БД.

. Запустите пакет установки `{dv} WorkerService.msi`.
+
.Мастер установки Службы {ws}
image::workerservice/6.1/admin/_images/install-hello.png[Мастер установки Службы {ws}]
+
. Примите условия лицензионного соглашения, чтобы продолжить установку, и нажмите кнопку *Далее*.
+
.Условия лицензионного соглашения
image::workerservice/6.1/admin/_images/install-license.png[Условия лицензионного соглашения]
+
. Выберите компоненты, которые требуется установить.
+
.Выбор устанавливаемых компонентов Службы {ws}
image::workerservice/6.1/admin/_images/install-components.png[Выбор устанавливаемых компонентов Службы {ws}]
+
****
Служба {ws}::
Устанавливает основные файлы Службы {ws}.

Серверные компоненты::
Когда компонент выбран, устанавливается библиотека карточек. Перед завершением установки будет запущена _{cns}_ для обновления БД.
+
[WARNING]
====
При установке серверных компонентов модуля на Windows требуется устанавливать только компонент "Серверные компоненты". Остальные компоненты будут установлены на сервер Linux.
====

Кнопки::
* *Сброс* -- сбрасывает выбор компонентов на стандартные
* *Использование диска* -- позволяет посмотреть свободное место на системных дисках.
****
+
//tag::confirm[]
. Нажмите кнопку *Установить*, чтобы начать установку или кнопку *Назад*, чтобы вернуться на предыдущий шаг.
//end::confirm[]
+
.Продолжить установку или вернуться на предыдущий шаг
image::workerservice/6.1/admin/_images/install-check.png[Продолжить установку или вернуться на предыдущий шаг]
+
// . Не устанавливайте флаг `*Обновить базу данных (WorkerService)*`.
// +
//tag::finish[]
. Нажмите кнопку *Готово*, чтобы закрыть мастер установки.
//end::finish[]
+
. Если данный модуль устанавливается последним, запустите {cns} и выполните обновление базы данных, следуя инструкции в документации по администрированию модуля "{pl}":
+
* "xref:6.1@platform:console:db-connect.adoc[]"
* "xref:6.1@platform:console:db-create.adoc[]"
+
. На сервере Linux, укажите псевдоним и строку подключения к существующей или новой БД в конфигурационном файле модуля {pl} и перезапустите службу *{sss-new}* командой:
+
[source,bash]
----
sudo systemctl restart dvappserver
----
+
. Запустите {wincl}. При подключении к серверу {dv} с установленной серверной частью модуля, клиентская часть модуля будет установлена автоматически.

[#admin:install:::установка-клиентской-части-модуля-из-установочного-пакета]
==== Установка клиентской части модуля из установочного пакета

.Чтобы установить клиентскую часть модуля вручную:
. Запустите пакет установки `{dv} Worker service client.msi` вручную.
+
Для установки клиентской части модуля используются область и каталог установки, указанные в конфигурационном файле модуля {pl}, см. документацию модуля {pl} xref:6.1@platform:console:config-client.adoc[].
// (указана в приветственном окне мастера установки)  установки, которые были использованы при установке модуля {pl}.
+
. Примите условия лицензионного соглашения, чтобы продолжить установку.
. Нажмите на кнопку *Установить* и дождитесь завершения установки модуля.
. Нажмите на кнопку *Готово*, чтобы закрыть мастер установки.

:!of:
:!wt:
:config: appsettings

:docname: update-module
:page-module: admin
:page-relative-src-path: update-module.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#admin:update-module:::]
=== Обновление модуля
:update: workerservice-*


Список изменений в текущей версии см. здесь: <<common:change-log:::>>.

* Установка новой версии должна выполняться в нерабочее время.
* Создайте резервную копию БД {dv}.
* База данных {dv} должна быть переведена на работу с расширенными метаданными.
* При обновлении версия клиентского дистрибутива должна быть равной версии серверного дистрибутива.
* Если к новой версии модуля приложена инструкция по обновлению, следуйте ей.
* *Если комплект обновления включает обновление для модуля "{pl}"*, перейдите к инструкции, приведенной xref:6.1@platform:admin:update-module.adoc[в документации] модуля {pl}.

// tag::noimage[]
// tag::bare-minimum[]
Если к новой версии модуля прилагается отдельная инструкция по обновлению, следуйте ей.

.Чтобы установить новую версию модуля:
// end::bare-minimum[]
. Создайте резервную копию БД.
// . Остановите сервис `dvappserver` все сервисы {dv}. Также остановите экземпляры Службы {ws} и все сервисы в кластере {dv} или СУБП, если таковые используются.
// tag::bare-minimum[]
. Устанавливать обновление рекомендуется на отдельную машину во избежание случаев, когда остаются старые файлы и папки системы.
. Обновите серверные компоненты на сервере Linux командой:
+
[source,subs=attributes]
----
sudo apt-get update
sudo apt-get install --only-upgrade docsvision-{update}
----
+
// tag::config[]
. На сервере Linux при обновлении сервиса будет предложено перезаписать текущий конфигурационный файл `appsettings.json`. Доступные варианты:
+
* Перезаписать текущий конфигурационный файл `appsettings.json`.
** Текущий файл будет перезаписан стандартным, все выполненные настройки будут сохранены в файле `appsettings.json.dpkg-old`. Существующие настройки, включая псевдонимы и строки подключения к БД, потребуется перенести в новый файл `appsettings.json`.
* Сохранить текущий `appsettings.json`.
** Все выполненные настройки останутся без изменений, стандартный файл конфигурации будет сохранён как `appsettings.json.dpkg-dist`.
* Показать различия между версиями.
** В окне командной строки будут отображены отличия между старой и новой версией. Знаком `+` обозначаются добавленные строки, знаком `-` обозначаются удалённые строки.
* Запустить оболочку командной строки для проверки ситуации.
** Возвращает в окно командной строки, дальнейшие действия зависят от администратора.
// end::config[]
// end::bare-minimum[]
+
. Затем установите серверные компоненты на машину с Windows, запустив инсталлятор `.msi` серверной части модуля.
+
. Перезапустите *{sss-new}* и все сервисы {dv} на Linux.
+
. Запустите программу _{cns}_ и перейдите в раздел _Базы данных_.
+
****
Пользователь, от имени которого запускается _{cns}_:

* Должен являться администратором {dv} -- быть добавленным в группу *{dv-admins-serv}* в конфигурационном файле модуля _{pl}_, см. раздел "xref:6.1@platform:admin:config-platform.adoc[]".
* Входить в группы {dv} в Справочнике сотрудников:
+
- _{dv-dm-admins-dir}_.
- _{dv-ad-admins-dir}_.
- _{dv-sys-wf-dir}_.
- __Системные группы_.
****
+
. Обновите существующую БД по инструкции, приведённой в документации модуля _{pl}_, раздел "xref:6.1@platform:console:db-update.adoc[]".
+
NOTE: Установка флагов в диалогах выбора обновляемых библиотек карточек и настроек модулей может оказаться недоступной, если изменений в библиотеке карточек между обновлениями не было.
+
. Дойдите до выбора обновляемых библиотек карточек. Выберите библиотеки и нажмите *Далее*.
+
.Обновление библиотек карточек
image::platform/6.1/admin/_images/db-update-libs.png[Обновление библиотек карточек]
+
. Перезапустите *{sss-new}* и все сервисы {dv} на Linux ещё раз.
. Выберите модули {dv}, настройки которых должны быть загружены в БД и нажмите *Завершить*.
+
// end::noimage[]
.Шаг загрузки настроек модулей
image::platform/6.1/admin/_images/db-create-modules.png[Шаг загрузки настроек модулей]
+
// . Установите новую версию модуля, не обновляя БД (флаг `*Обновить базу данных*` должен быть снят):
// +
// * На оставшихся узлах кластера {dv}.
// * На сервере СУБП, {wc}а и других модулей, использующих компоненты модуля _{bo}_.
// +
. Клиентские компоненты модуля необходимо устанавливать на компьютерах пользователей, если был установлен {wincl}. Компоненты будут обновлены автоматически при запуске {wincl}а.
+
Самостоятельно обновить клиентские компоненты можно из пакета установки
`{dv} Worker service client.msi`.
+
// [#multiple-modules]
// == Обновление нескольких модулей
//
// Если планируется обновлять несколько модулей, следующие действия следует выполнять один раз после установки новых версий всех модулей:
//
// . Откройте _{cns}_.
// +
// Пользователь, от имени которого запускается _{cns}_ должен являться администратором {dv}, а также входить в группы {dv} в Справочнике сотрудников: _{dv-dm-admins-dir}_, _{dv-ad-admins-dir}_ и _{dv-sys-wf-dir}_.
// +
// . На странице _Базы данных_ выберите рабочую БД {dv}, установите переключатель в режим *Использовать выбранную в списке базу данных* и нажмите *Далее*.
// . Будет предложено обновить базу данных до новой версии. Выберите вариант *ДА*.
// . На следующей странице не изменяйте выбор обновляемых библиотек карточек. Нажмите *Далее*.
// . На странице _Параметры базы данных_ нажмите *Далее*. Появится запрос на подтверждение обновления -- согласитесь. Процесс обновления займет некоторое время.
// // . На странице настройки производительности и перезапуска IIS нажмите *Далее*.
// . На странице _Загрузка специальной конфигурации {dm}_ нажмите *Далее*, чтобы загрузить стандартную конфигурацию приложения {dm} или пропустите шаг нажатием кнопки *Пропустить*.
// +
// WARNING: Данные действия приведут к загрузке стандартных настроек приложения _{dm}_ и модуля _{ad}_. Если требуется сохранить собственные настройки, на шаге "Загрузка специальной конфигурации" нажмите кнопку *Пропустить*, подробнее см. в xref:documentmgmt:admin:update-module.adoc#update-no-overwrite[документации по обновлению модуля {dm}].
// +
// . Повторите предыдущий шаг для страницы _Загрузка специальной конфигурации {ad}_.
// . Подтвердите настройки Workflow и выйдите из мастера.
. Обновите версию модуля на всех узлах кластера {dv}, СУБП и Web-клиента.
. Клиентские компоненты модуля на компьютерах пользователей будут обновлены автоматически при запуске {wincl}а.
+
Самостоятельно обновить клиентские компоненты можно из пакета установки `Docsvision Worker service client.msi`.

:!update:

:docname: launch
:page-module: admin
:page-relative-src-path: launch.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#admin:launch:::]
=== Запуск Службы фоновых операций

Работу _Службы {ws}_ обеспечивает служба *{wss-new}*. Данная служба должна быть запущена от имени учётной записи с правами администратора, т.е. для УЗ требуется членство в группе *{dv-sys-wf-dir}* в справочнике сотрудников на сервере {dv}.
// учётная запись должна быть добавлена в группу локальных администраторов на сервере {dv}.

_Cлужба {ws}_ может использовать сервис перештамповки подписей.
// tag::cpus[]
Для корректной работы службы {ws} с использованием сервиса перештамповки подписей необходимо использовать машину, имеющую как минимум два процессора.
// end::cpus[]

При первом запуске _Служба {ws}_ читает список типов установленных расширений и прописывает себя вместе с расширениями в _{sett-serv}_. Таким образом Служба {ws} идентифицирует себя и открывает доступ к своим функциям для системы {dv}.

В дальнейшем, когда _Служба {ws}_ прочитает конфигурацию и создаст расширения, для работы отдельных расширений могут потребоваться права пользователей из группы _{dv-sys-wf-dir}_ в справочнике сотрудников {dv}.

Все настройки службы считываются из _{of-sett-serv}_.

[NOTE]
====
// tag::console[]
При использовании модуля _{mc}_ убедитесь, что сервер {dv} на Linux активен и на нём запущены службы *{wacss-new}*, *{extapi-new}*, *{wacs-new}* и *{wss-new}*.

// , что учётная запись, под которой запускается _Служба {ws}_ включена в группу *{dv-sett-serv-admins-serv}* на сервере с модулем _{mc}_.
// end::console[]
В противном случае будет недоступен xref:6.1@mgmtconsole:user:worker-service.adoc[узел Службы {ws}] в {of-mc}.
====

:docname: work-log
:page-module: admin
:page-relative-src-path: work-log.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#admin:work-log:::]
=== Журнал работы
:serv: {wss-new}


Журнал работы модуля в локальной файловой системе располагается в каталоге `/var/log/docsvision`.

. Посмотреть журнал службы (только записи в `stdout/stderr`):
+
[source,bash,subs=attributes]
----
sudo journalctl -u {serv}
----
+
. Посмотреть только самые последние записи в журнале и выводить новые записи по мере их появления:
+
[source,bash,subs=attributes]
----
sudo journalctl -f -u {serv}
----

Пути к журналам и уровень журналирования настраиваются в конфигурационном файле `/usr/lib/docsvision/workerservice/Configuration.json` в параметрах:

* `LogFile` -- путь к журналу работы.
* `LogTraceLevel` -- уровень журналирования.
+
.Администратор может настроить следующие уровни журналирования:
** Журналирование отключено (Off) = `0`.
** Только ошибки (Error) = `1`.
** Ошибки и предупреждения (Warning) = `2`.
** Сообщения, ошибки и предупреждения (Info) = `3`.
** Подробное журналирование (Verbose) = `4`.

Учётная запись, под которой запущена Служба {ws}, должна обладать правами на запись в папку хранения журналов.

:!serv:

:docname: msg-autoremove
:page-module: admin
:page-relative-src-path: msg-autoremove.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#admin:msg-autoremove:::]
=== Автоматическая очистка сообщений в карточках сообщений

В процессе работы в карточках сообщений может накапливаться большое число входящих и исходящих сообщений, что может существенно замедлять работу с такими карточками, отправка исходящих сообщений особенно подвержена негативному влиянию. Негативное влияние призвана снизить возможность автоматической очистки исходящих и входящих сообщений.

[#admin:msg-autoremove:::настройка-автоматической-очистки]
==== Настройка автоматической очистки

. Автоматическая очистка регламентируется настройками в таблице БД *dvsys_settings*:
+
--
* Для входящих сообщений:
** *WorkerService_ClearIncomingMessages* -- политика очистки входящих сообщений. `0` -- не очищать, `1` -- по дням, `2` -- по количеству. Очищаются только сообщения в состоянии _Обработано_.
** *WorkerService_ClearIncomingMessages_Days* -- ограничение устанавливает срок в днях, после которого входящих сообщения будут удаляться. Например, если установлено ограничение в `3` дня, будут удалены все сообщения старше `3` дней.
Если значение меньше `1`, очистка производиться не будет.
+
** *WorkerService_ClearIncomingMessages_Count* -- максимальное количество входящих сообщений, которые останутся в очереди. Если значение меньше `1`, очистка производиться не будет.
* Для исходящих сообщений:
** *WorkerService_ClearOutgoingMessages* -- политика очистки исходящих сообщений. `0` -- не очищать, `1` -- по дням, `2` -- по количеству.
** *WorkerService_ClearOutgoingMessages_Days* -- ограничение устанавливает срок в днях, после которого исходящие сообщения будут удаляться. Например, если установлено ограничение в `3` дня, будут удалены все сообщения старше `3` дней.
Если значение меньше `3`, очистка производиться не будет.
+
** *WorkerService_ClearOutgoingMessages_Count* -- максимальное количество исходящих сообщений, которые останутся в очереди. Если значение меньше `3000`, очистка производиться не будет.
--
+
.Значения по умолчанию:
[cols="66%,34%",options="header"]
|===
|Настройка  |Значение по умолчанию

|`WorkerService_ClearIncomingMessages` |`0`
|`WorkerService_ClearOutgoingMessages` |`0`
|`WorkerService_ClearIncomingMessages_Days` |`7`
|`WorkerService_ClearOutgoingMessages_Days` |`7`
|`WorkerService_ClearIncomingMessages_Count` |`-1`
|`WorkerService_ClearOutgoingMessages_Count` |`-1`
|===
+
. Раз в сутки в 2 часа ночи запускается служебная задача *dvjob_workerservice_clear_old_messages*, выполняющая хранимую процедуру *dvws_clear_old_messages* для удаления сообщений согласно указанным настройкам.
// Например, удалять входящие сообщения через `15` дней, а исходящие сообщения, если их количество достигло `3000`.

:docname: introduction
:page-module: extensions
:page-relative-src-path: introduction.adoc
:page-origin-url: https://github.com/Docsvision/Worker-Antora.git
:page-origin-start-path:
:page-origin-refname: 6.1
:page-origin-reftype: branch
:page-origin-refhash: 9739871b5a381f6018b316ad738174227c7ff59e
[#extensions:introduction:::]
== Разработка расширений службы фоновых операций

Если вы использовали расширения Службы {ws} предыдущих версий и хотели бы использовать эту возможность в новой версии, xref:system::technical-support.adoc[обратитесь] в техническую поддержку {dv}.

//Инструкция по разработке дополнительных компонентов, расширяющих функциональные возможности модуля {dv} 5. Служба {ws}. В инструкции приведено описание основных объектов API Службы {ws}, описание программных сервисов, предоставляемых API и примеры разработки.
//
//Документ предназначен для программистов, планирующих использовать Службу {ws} для обработки задач системы {dv} или других систем.
//
//== Уровень подготовки разработчика
//
//Предполагается, что разработчик расширений для Службы {ws} знаком с принципами разработки программ на языке C# в IDE Visual Studio.
